[NOID] fix compile errors and format changes